<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SeaGreen"
    tools:context=".MainActivity">

    <Toolbar
        android:id="@+id/mainTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/RoyalBlue"
        android:title="@string/tb_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTB">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/name_text"
                android:textColor="@color/DarkOrange"
                android:textSize="22dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:hint="@string/hint_text"
                android:textSize="26dp" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/last_name_text"
                android:textColor="@color/DarkOrange"
                android:textSize="22dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/lastNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:hint="@string/hint_text"
                android:textSize="26dp" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/post_text"
                android:textColor="@color/DarkOrange"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbarSize="26dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/SandyBrown" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveBTN"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/RoyalBlue"
            android:padding="8sp"
            android:text="@string/save_btn_text"
            android:textSize="18dp"
            android:textStyle="italic"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/SandyBrown" />

        <ListView
            android:id="@+id/listLV"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>